--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "prettier": "^1.19.1",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.11"
     }
 }
